# ai

./: .env.example  .gitignore  FEATURES.md  README.md  all_cars.json  car.json  hawaii_frame_clf.joblib  image_segmentation.py  pyproject.toml  requirements.txt  tmp_luggage.py  vehicles.json  weights_v1.joblib
addons/: addons.json  main.py
app/: addons.py  broadcast_utils.py  features.py  main.py  realtime_cnn.py  realtime_model.py  state.py
key_vending_machine/: key_vending_machine.ino
scripts/: generate_data.py  inference.py  live_sam3_segmentation.py  process_video.py  train_hawaii_classifier.py  train_hawaii_cnn.py
