[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "joblib>=1.5.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "ultralytics>=8.3.230",
    "uvicorn[standard]>=0.38.0",
]
